--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 plugins  {
 	id 'org.springframework.boot' version '2.2.4.RELEASE' apply false
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
+	id "org.sonarqube" version "3.0"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "smartbit4all_platform"
+    property "sonar.organization", "smartbit4all"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 subprojects {
