--- a/ui-common/build.gradle
+++ b/ui-common/build.gradle
@@ -2,4 +2,5 @@ dependencies {
 	api 'org.springframework:spring-context:5.2.3.RELEASE'
 	
 	api project(':api')
+    implementation 'io.swagger:swagger-annotations:1.5.22'
 }
