--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ subprojects {
     compileTestJava.options.encoding = "UTF-8"
 
     group "org.smartbit4all.platform"
-    version "1.0.0"
+    version "1.0.1-SNAPSHOT"
 
     dependencies {
     	implementation 'org.slf4j:slf4j-api:1.7.30'
