[#1792] Org API - extend with current user access

--- a/api/src/main/resources/descriptors/org-api.yaml
+++ b/api/src/main/resources/descriptors/org-api.yaml
@@ -151,6 +151,9 @@ components:
         username: 
           type: string
           description: 'The username'
+        name: 
+          type: string
+          description: 'The name fo the user'
         email:
           type: string
           format: email
