--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,54 @@
-# Compiled class file
-*.class
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+!**/src-gen/main/**/build/
+!**/src-gen/test/**/build/ 
 
-# Log file
-*.log
+### STS / Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+.dbeaver
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+!**/src-gen/main/**/bin/
+!**/src-gen/test/**/bin/ 
 
-# BlueJ files
-*.ctxt
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+### VS Code ###
+.vscode/
+
+#vaadin npm, frontend
+node_modules/
+package.json
+pnpm-lock.yaml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Ignore Gradle project-specific cache directory
-.gradle
+# Log file
+*.log
 
-# Ignore Gradle build output directory
-/build
-
-# Ignore Buildship pref. files
-org.eclipse.buildship.core.prefs
-
-# Ignore local-maven-repo
-local-maven-repo
-
-.dbeaver
