[#3511] module structure refactor

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'remote'
 include 'ui-common'
 include 'ui-vaadin'
 include 'api'
+include 'api-domain'
 include 'types'
 include 'sec'
 include 'sec-ms365'
