[#3615] create ui-api

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'domain'
 include 'sql'
 include 'json'
 include 'remote'
+include 'ui-api'
 include 'ui-common'
 include 'ui-vaadin'
 include 'api'
