--- a/ui-common/build.gradle
+++ b/ui-common/build.gradle
@@ -2,6 +2,7 @@ dependencies {
 	api 'org.springframework:spring-context:5.2.3.RELEASE'
 	
 	api project(':api')
+	api project(':ui-api')
 	api project(':domain')
     implementation 'io.swagger:swagger-annotations:1.5.22'
 }
