[#3615] move view model interfaces to ui-api

--- a/ui-api/build.gradle
+++ b/ui-api/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 
 dependencies {
+    api project(':core')
     api project(':api-domain')
     api project(':types')
     // its needed for the openApi spring codegen
