--- a/sql/build.gradle
+++ b/sql/build.gradle
@@ -9,4 +9,6 @@ dependencies {
         exclude group: 'ch.qos.logback', module: 'logback-classic'
 	}
 	testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
+	
+	testImplementation project(':gson')
 }
