--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins  {
 	id 'org.springframework.boot' version '2.2.4.RELEASE' apply false
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
+    id 'org.smartbit4all.platform.gradle.java' apply false
 	id "org.sonarqube" version "3.0"
 }
 
@@ -14,21 +15,14 @@ sonarqube {
 
 subprojects {
 	
-    repositories {
-        jcenter() 
-    }
-
-    apply plugin: 'java-library'
+    apply plugin: 'org.smartbit4all.platform.gradle.java'
     apply plugin: 'maven-publish'
-
-    sourceCompatibility = 8
-    targetCompatibility = 8
-
-    compileJava.options.encoding = "UTF-8"
-    compileTestJava.options.encoding = "UTF-8"
 
     group "org.smartbit4all.platform"
     version "1.0.1-SNAPSHOT"
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
     dependencies {
     	implementation 'org.slf4j:slf4j-api:1.7.30'
@@ -42,10 +36,6 @@ subprojects {
 		withSourcesJar()
 	}
 
-    test {
-        useJUnitPlatform()
-    }
-
     publishing {
         publications {
             maven(MavenPublication) {
@@ -54,10 +44,6 @@ subprojects {
         }
 
 	    repositories {
-//	        maven {
-//	            name = 'local-maven-repo'
-//	            url = "file://${projectDir}/../local-maven-repo"
-//	        }
 			maven {
 	            name = "GitHubPackages"
 	            url = uri("https://maven.pkg.github.com/it4all-hungary/p001")
