Revert "[#3940] remove platform-gradle dependency"
This reverts commit c8c4174a2eb19533b1e84b85b3202f158d6f77eb.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins  {
 	id 'org.springframework.boot' version '2.2.4.RELEASE' apply false
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
-    id 'org.smartbit4all.platform.gradle.java' version '0.1.5' apply false
+    id 'org.smartbit4all.platform.gradle.java' apply false
 	id "org.sonarqube" version "3.0"
 }
 
