--- a/ui-api/src/main/resources/descriptors/form-api.yaml
+++ b/ui-api/src/main/resources/descriptors/form-api.yaml
@@ -106,16 +106,16 @@ components:
         - number
         - number_interval
       description: >
-         * 'container' This is just a folder for a set of widgets.
-         * 'reference' Can be used to manage the reference for another entity. 
-         * 'detail' A list of other entities contained by the current entity.
-         * 'association' The association is reference for an independent entity instance. TODO 
-         * 'text' A text widget (a string value text field).
-         * 'combobox' A selectable value stored in one or more fields
-         * 'date' The single property widget with date type. 
-         * 'date_interval' An editor with a pair of date properties.
-         * 'number' The single property widget with number type.
-         * 'number_interval' An editor with a pair of number properties.
+         * `container` This is just a folder for a set of widgets.
+         * `reference` Can be used to manage the reference for another entity. 
+         * `detail` A list of other entities contained by the current entity.
+         * `association` The association is reference for an independent entity instance. TODO 
+         * `text` A text widget (a string value text field).
+         * `combobox` A selectable value stored in one or more fields
+         * `date` The single property widget with date type. 
+         * `date_interval` An editor with a pair of date properties.
+         * `number` The single property widget with number type.
+         * `number_interval` An editor with a pair of number properties.
     PredictiveInputGraphDescriptor:
       description: A special layout defines a graph for the input values of PredictiveFormInstance. The available choices are calculated by this graph while editing the PredictiveFormInstance.
       type: object
